--- a/config.ini
+++ b/config.ini
@@ -10,4 +10,4 @@ date                = May 26, 2016
 128k = http://bassdrive.com/streams/bassdrive.m3u
 
 [cachefiles]
-streams             = cache/streams.json
+streams             = streams.json
