--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 
 [plugin]
 id                  = kodi.bassdrive.arcti.cc
-date                = May 26, 2016
+date                = Sep 29, 2016
 
 [streams]
 32k = http://bassdrive.com/streams/bassdrive3.m3u
@@ -11,3 +11,4 @@ date                = May 26, 2016
 
 [cachefiles]
 streams             = streams.json
+archives            = archives.json
